# CodeSys-SFC-to-Cpp-converter

./: .clang-format  .gitignore  CMakeLists.txt  Converter.cpp  Converter.hpp  PLC_PRG.cpp  PLC_PRG.hpp  README.md  SFCConverter.cpp  State.cpp  State.hpp  Timer.cpp  Timer.hpp  Transition.cpp  Transition.hpp  deployWindows.bat  main.cpp  test.cpp  test.txt  test.xml
res/: icons.rc
sfcTest/: test.project
src/: Converter.cpp  Converter.hpp  GeneralConverter.cpp  GeneralConverter.hpp  SFCConverter.cpp  SFCConverter.hpp  VarsConverter.cpp  VarsConverter.hpp
